force-app/main/default/objects/Milestone1_Task__c/fields/Second_Chair_for_Debrief_Alert__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair_for_Debrief_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a filed in the background for the debrief alert purposes</description>
    <label>Second Chair for Debrief Alert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TMG_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>