force-app/main/default/objects/Milestone1_Task__c/fields/Second_Chair_for_Debrief_Alert_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair_for_Debrief_Alert_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Chair for Debrief Alert Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Tasks (Second Chair for Debrief Alert Contact)</relationshipLabel>
    <relationshipName>TMG_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>