force-app/main/default/objects/Milestone1_Task__c/fields/Second_to_Last_Coaching_Session__c.field-meta.xml
<CustomField>
    <fullName>Second_to_Last_Coaching_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second-to-Last Coaching Session</label>
    <type>Checkbox</type>
</CustomField>