force-app/main/default/objects/Milestone1_Task__c/fields/Silent_Listener__c.field-meta.xml
<CustomField>
    <fullName>Silent_Listener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Silent Listener</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Miles Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks4</relationshipName>
    <type>Lookup</type>
</CustomField>