force-app/main/default/objects/Milestone1_Task__c/fields/Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Name__c</fullName>
    <label>Stakeholder Name</label>
    <length>99</length>
    <type>Text</type>
</CustomField>