force-app/main/default/objects/Milestone1_Task__c/fields/Stakeholder_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Relationship__c</fullName>
    <label>Stakeholder Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Direct Manager</fullName>
            </value>
            <value>
                <fullName>Indirect Manager</fullName>
            </value>
            <value>
                <fullName>HR Stakeholder</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>