force-app/main/default/objects/Milestone1_Task__c/fields/Stakeholders_To_Align__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders_To_Align__c</fullName>
    <label>Stakeholders To Align</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>COB</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>