force-app/main/default/objects/Milestone1_Task__c/fields/Task_Stage__c.field-meta.xml
<CustomField>
    <fullName>Task_Stage__c</fullName>
    <defaultValue>&quot;Pending Approval&quot;</defaultValue>
    <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Assigned</fullName>
            </value>
            <value>
                <fullName>To Be Scheduled</fullName>
            </value>
            <value>
                <fullName>Client Contacted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled by TMG</fullName>
            </value>
            <value>
                <fullName>Cancelled by Client</fullName>
            </value>
            <value>
                <fullName>TBR (To Be Rescheduled)</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Pending Renewal</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>To Be Completed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>To Be Confirmed</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>Incomplete (Calendar Conflicts)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>