force-app/main/default/objects/Milestone1_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assessment Interview</fullName>
            </value>
            <value>
                <fullName>Reference Call</fullName>
            </value>
            <value>
                <fullName>Assessment Report</fullName>
            </value>
            <value>
                <fullName>Stakeholder Debrief</fullName>
            </value>
            <value>
                <fullName>Feedback Session</fullName>
            </value>
            <value>
                <fullName>Product Coaching Report</fullName>
            </value>
            <value>
                <fullName>Follow Up with Stakeholder</fullName>
            </value>
            <value>
                <fullName>Coaching Report</fullName>
            </value>
            <value>
                <fullName>Coaching Followup</fullName>
            </value>
            <value>
                <fullName>Project Kick-off (Org Review)</fullName>
            </value>
            <value>
                <fullName>Coaching Cert/Content Call</fullName>
            </value>
            <value>
                <fullName>Mock Coaching Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>