force-app/main/default/objects/Milestone1_Task__c/fields/TMG_Conga_Reference_Call_Template__c.field-meta.xml
<CustomField>
    <fullName>TMG_Conga_Reference_Call_Template__c</fullName>
    <description>##Conga created btn:00b2A000001SQWB</description>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[References]00O3k000007o6hC, [Coaching]00O3k000008MsFx, [Assessment]00O3k000007o6hb&quot; + 
&quot;&amp;templateid=&quot; + Conga_Template_ID__c + 
&quot;&amp;ofn= TEMPLATE_REF_&quot; + Reference_Relationship_Conga__c + &quot;_&quot; +  Project_Milestone__r.Assessed_Executive__r.LastName + &quot; &quot; +  Project_Milestone__r.Assessed_Executive__r.FirstName +&quot; (atb &quot; + Reference_Last_Name_First__c + &quot;)_2020-XX-XX_&quot; +  TMG_Alias__c  + 
&quot;&amp;BoxVisible=1&quot; +
&quot;&amp;qmode=Box&quot; +
&quot;&amp;ofp=TMG Reference Templates/&quot; + Project_Milestone__r.Assessed_Executive__r.LastName + &quot; &quot; + Project_Milestone__r.Assessed_Executive__r.FirstName + &quot;_references&quot;</formula>
    <label>TMG Conga Reference Call Template</label>
    <type>Text</type>
</CustomField>