force-app/main/default/objects/Milestone1_Task__c/fields/TMG_Second_Chair_for_Feedback_Alert__c.field-meta.xml
<CustomField>
    <fullName>TMG_Second_Chair_for_Feedback_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMG Second Chair for Feedback Alert</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Tasks (TMG Second Chair for Feedback Alert)</relationshipLabel>
    <relationshipName>TMG_Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>