force-app/main/default/objects/Milestone1_Task__c/fields/Update_Received__c.field-meta.xml
<CustomField>
    <fullName>Update_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Received</label>
    <type>Checkbox</type>
</CustomField>