force-app/main/default/objects/Milestone1_Task__c/recordTypes/All_Functions.recordType-meta.xml
<RecordType>
    <fullName>All_Functions</fullName>
    <active>true</active>
    <description>Contains all task types and all fields.</description>
    <label>All Functions</label>
</RecordType>