force-app/main/default/objects/Milestone1_Task__c/recordTypes/Assessment_Feedback_Session.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Feedback_Session</fullName>
    <active>true</active>
    <label>Assessment Feedback Session</label>
</RecordType>