force-app/main/default/objects/Milestone1_Task__c/recordTypes/Assessment_Interview.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Interview</fullName>
    <active>true</active>
    <label>Assessment Interview</label>
</RecordType>