force-app/main/default/objects/Milestone1_Task__c/recordTypes/Basic_Task.recordType-meta.xml
<RecordType>
    <fullName>Basic_Task</fullName>
    <active>true</active>
    <label>BD - Call/Meeting</label>
</RecordType>