force-app/main/default/objects/Milestone1_Task__c/recordTypes/BD_Materials_Sent.recordType-meta.xml
<RecordType>
    <fullName>BD_Materials_Sent</fullName>
    <active>true</active>
    <label>BD - Materials Sent</label>
</RecordType>