force-app/main/default/objects/Milestone1_Task__c/recordTypes/Board_Feedback_Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>Board_Feedback_Follow_Up</fullName>
    <active>true</active>
    <label>Board Feedback/Follow-Up</label>
</RecordType>