force-app/main/default/objects/Milestone1_Task__c/recordTypes/Board_Interview.recordType-meta.xml
<RecordType>
    <fullName>Board_Interview</fullName>
    <active>true</active>
    <label>Board Interview</label>
</RecordType>