force-app/main/default/objects/Milestone1_Task__c/recordTypes/Board_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Board_Presentation</fullName>
    <active>true</active>
    <label>Board Presentation</label>
</RecordType>