force-app/main/default/objects/Milestone1_Task__c/recordTypes/Client_Update.recordType-meta.xml
<RecordType>
    <fullName>Client_Update</fullName>
    <active>true</active>
    <description>Meeting between Stakeholder / HR to update on project status</description>
    <label>Client Update</label>
</RecordType>