force-app/main/default/objects/Milestone1_Task__c/recordTypes/Coaching_Session.recordType-meta.xml
<RecordType>
    <fullName>Coaching_Session</fullName>
    <active>true</active>
    <label>Coaching Session</label>
</RecordType>