force-app/main/default/objects/Milestone1_Task__c/recordTypes/Deliver_Report.recordType-meta.xml
<RecordType>
    <fullName>Deliver_Report</fullName>
    <active>true</active>
    <description>Used for the delivery of all materials</description>
    <label>Materials Sent</label>
</RecordType>