force-app/main/default/objects/Milestone1_Task__c/recordTypes/Internal_Calls_Meetings.recordType-meta.xml
<RecordType>
    <fullName>Internal_Calls_Meetings</fullName>
    <active>true</active>
    <description>Used only for all internal calls&amp; meetings</description>
    <label>Internal Calls / Meetings</label>
</RecordType>