force-app/main/default/objects/Milestone1_Task__c/recordTypes/Materials_to_be_received.recordType-meta.xml
<RecordType>
    <fullName>Materials_to_be_received</fullName>
    <active>true</active>
    <description>Fo ruse when we are awaiting materials from a client</description>
    <label>Materials to be received</label>
</RecordType>