force-app/main/default/objects/Milestone1_Task__c/recordTypes/Primary_Manager_Debrief.recordType-meta.xml
<RecordType>
    <fullName>Primary_Manager_Debrief</fullName>
    <active>true</active>
    <label>Primary Manager Debrief</label>
</RecordType>