force-app/main/default/objects/Milestone1_Task__c/recordTypes/Reference_Call.recordType-meta.xml
<RecordType>
    <fullName>Reference_Call</fullName>
    <active>true</active>
    <label>Reference Call</label>
</RecordType>