force-app/main/default/objects/Milestone1_Task__c/recordTypes/Report_1st_Draft_new.recordType-meta.xml
<RecordType>
    <fullName>Report_1st_Draft_new</fullName>
    <active>true</active>
    <label>Report Draft</label>
</RecordType>