force-app/main/default/objects/Milestone1_Task__c/recordTypes/Secondary_Manager_Debrief.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Manager_Debrief</fullName>
    <active>true</active>
    <label>Secondary Manager Debrief</label>
</RecordType>