force-app/main/default/objects/Milestone1_Task__c/recordTypes/Stakeholder_Check_In.recordType-meta.xml
<RecordType>
    <fullName>Stakeholder_Check_In</fullName>
    <active>true</active>
    <label>Stakeholder Check-In</label>
</RecordType>