force-app/main/default/objects/Milestone1_Task__c/recordTypes/Stakeholder_Debrief.recordType-meta.xml
<RecordType>
    <fullName>Stakeholder_Debrief</fullName>
    <active>true</active>
    <label>Stakeholder Debrief</label>
</RecordType>