force-app/main/default/objects/Milestone1_Task__c/recordTypes/Team_Effectiveness_Interview.recordType-meta.xml
<RecordType>
    <fullName>Team_Effectiveness_Interview</fullName>
    <active>true</active>
    <label>Team Effectiveness Interview</label>
</RecordType>