force-app/main/default/objects/Milestone1_Task__c/recordTypes/Team_Offsite.recordType-meta.xml
<RecordType>
    <fullName>Team_Offsite</fullName>
    <active>true</active>
    <description>Team offsite</description>
    <label>Team Offsite</label>
</RecordType>