force-app/main/default/objects/Milestone1_Task__c/validationRules/MustBeCoachingTask.validationRule-meta.xml
<ValidationRule>
    <fullName>MustBeCoachingTask</fullName>
    <active>true</active>
    <description>Limits the types of tasks for a coaching dleiverable</description>
    <errorConditionFormula>RecordType.DeveloperName  &lt;&gt; &quot;Coaching_Session&quot; &amp;&amp;   Project_Milestone__r.RecordType.DeveloperName  = &quot;Executive_Coaching&quot;</errorConditionFormula>
    <errorMessage>Only record type &quot;Coaching Session&apos; is allowed for Executive Coaching Deliverables</errorMessage>
</ValidationRule>