force-app/main/default/objects/Milestone1_Task__c/validationRules/Opportunity_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>Project_Milestone__r.Opportunity_Lost__c = True &amp;&amp;  Opportunity_Name__r.CloseDate &lt; TODAY()</errorConditionFormula>
    <errorMessage>The related opportunity has been closed lost, and will not accept new tasks. Please contact Jan Stoe to have a new opportunity opened.</errorMessage>
</ValidationRule>