force-app/main/default/objects/Milestone1_Task__c/listViews/Anne_O_90_Days_Scheduling.listView-meta.xml
<ListView>
    <fullName>Anne_O_90_Days_Scheduling</fullName>
    <booleanFilter>((1 OR 2 OR 3) AND (4 OR 5 OR 6 OR 7)) AND (8 OR 9)</booleanFilter>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Task_Stage__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>First_Chair_User__c</columns>
    <columns>Second_Chair_User__c</columns>
    <columns>Silent_Listener__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>First_Chair_User__c</field>
        <operation>equals</operation>
        <value>Anne Orcutt</value>
    </filters>
    <filters>
        <field>Second_Chair_User__c</field>
        <operation>equals</operation>
        <value>Anne Orcutt</value>
    </filters>
    <filters>
        <field>Silent_Listener__c</field>
        <operation>equals</operation>
        <value>Anne Orcutt</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <filters>
        <field>Task_Stage__c</field>
        <operation>equals</operation>
        <value>,To Be Scheduled,Client Contacted,Scheduled</value>
    </filters>
    <filters>
        <field>Task_Stage__c</field>
        <operation>equals</operation>
        <value>TBR (To Be Rescheduled),Pending Approval,Pending Renewal,Confirmed</value>
    </filters>
    <label>Anne O (90 Days - Scheduling)</label>
    <sharedTo>
        <group>TMG_Admin</group>
        <group>TMG_Client_Services_Team</group>
    </sharedTo>
</ListView>