force-app/main/default/objects/Milestone1_Task__c/listViews/Anne_Orcutt_Batched_References.listView-meta.xml
<ListView>
    <fullName>Anne_Orcutt_Batched_References</fullName>
    <columns>Project__c</columns>
    <columns>Project_Milestone__c</columns>
    <columns>NAME</columns>
    <columns>Reference_Name_LU__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Task_Stage__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>First_Chair_User__c</field>
        <operation>equals</operation>
        <value>Anne Orcutt</value>
    </filters>
    <filters>
        <field>Batched_Reference__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Task_Stage__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled by TMG,Cancelled by Client,Cancelled by Client (Forfeit)</value>
    </filters>
    <label>Anne Orcutt -  Batched References</label>
    <sharedTo>
        <group>Anne_Orcutt</group>
        <group>TMG_Admin</group>
    </sharedTo>
</ListView>