force-app/main/default/objects/Milestone1_Task__c/listViews/BD_Tasks_All.listView-meta.xml
<ListView>
    <fullName>BD_Tasks_All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Task_Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Task__c.BD_Materials_Sent,Milestone1_Task__c.Basic_Task</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Jan Stoe,Melissa Jones,Carrie Gale,Andrew Reeves,Melody Gallo,Taariq</value>
    </filters>
    <filters>
        <field>Task_Stage__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled by TMG,Cancelled by Client</value>
    </filters>
    <label>BD Tasks All</label>
    <sharedTo>
        <group>Brandi_Kirk</group>
        <group>Tayob_Taariq</group>
    </sharedTo>
</ListView>