force-app/main/default/objects/Milestone1_Task__c/listViews/BD_Tasks_CH.listView-meta.xml
<ListView>
    <fullName>BD_Tasks_CH</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Task_Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Task__c.BD_Materials_Sent,Milestone1_Task__c.Basic_Task</value>
    </filters>
    <filters>
        <field>First_Chair_User__c</field>
        <operation>equals</operation>
        <value>Courtney Hamilton</value>
    </filters>
    <filters>
        <field>Task_Stage__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled by TMG,Cancelled by Client</value>
    </filters>
    <label>BD Tasks CH</label>
    <sharedTo>
        <group>Courtney_Hamilton</group>
        <group>TMG_Admin</group>
    </sharedTo>
</ListView>